--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
-# VITE_REACT_APP_API_URL=http://35.200.236.161:5001
-VITE_REACT_APP_API_URL=http://localhost:5001
+# Local environment
+# VITE_REACT_APP_API_URL=http://localhost:5001
 
+# Production environment (if using .env.production for deployment)
+VITE_REACT_APP_API_URL=http://35.200.236.161:5001
