--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
+PORT=5001
+VITE_REACT_APP_API_URL=http://35.200.236.161:5001
 MONGODB_URL = mongodb+srv://ritesh:ritesh46@cluster0.llbotrp.mongodb.net/susanskar_db?retryWrites=true&w=majority&appName=Cluster0
