--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Build Frontend
       run: | 
-        cd frontend/client
-        npm run build  # Build the frontend assets
+        cd client
+        npm run build 
 
     - name: Deploy to Server
       env:
