--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,25 +30,25 @@ jobs:
 
     - name: Deploy to Server
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secrets for SSH Key
+        SERVER_IP: ${{ secrets.SERVER_IP }}  # GitHub Secrets for the server IP
       run: |
         mkdir -p ~/.ssh
-        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa  # Set up the private key for SSH access
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts  # Add server IP to known hosts
-        
+        ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts  # Add the server to known hosts
+
         # Deploy Frontend
-        scp -r frontend/client/dist/ riteshgupta0968@$SERVER_IP:/home/riteshgupta0968/frontend/client/dist
+        scp -r client/dist/ riteshgupta0968@$SERVER_IP:/home/riteshgupta0968/frontend/client/dist
 
         # Deploy Backend
-        scp -r frontend/server/ riteshgupta0968@$SERVER_IP:/home/riteshgupta0968/frontend/server
+        scp -r server/ riteshgupta0968@$SERVER_IP:/home/riteshgupta0968/frontend/server
 
         # Restart Backend using PM2
         ssh riteshgupta0968@$SERVER_IP << EOF
           cd /home/riteshgupta0968/frontend/server
           npm install  # Install dependencies on the server
-          pm2 restart server.js  # Restart backend with PM2
+          pm2 restart server.js  # Restart the backend with PM2
         EOF
 
     - name: Reload Nginx
