--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,12 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_IP: ${{ secrets.SERVER_IP }}
         run: |
-          # SSH into the server and deploy
-          ssh -i $SSH_PRIVATE_KEY $SERVER_IP << 'EOF'
+           # Write SSH private key to file
+           echo "$SSH_PRIVATE_KEY" > private_key
+           chmod 600 private_key
+
+           ssh -i private_key -o StrictHostKeyChecking=no $SERVER_IP << 'EOF'
+           
             # Navigate to the server directory
             cd /home/riteshgupta0968/susanskar/server  # Absolute path for server
 
@@ -58,5 +62,5 @@ jobs:
             # Optionally restart NGINX if there were frontend changes
             sudo nginx -t
             sudo systemctl restart nginx
-          EOF
+           EOF
 
