--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,15 +31,10 @@ jobs:
         run: npm install
 
       - name: Deploy to server (via SSH)
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SERVER_IP: ${{ secrets.SERVER_IP }}
+        
         run: |
-           # Write SSH private key to file
-           echo "$SSH_PRIVATE_KEY" > private_key
-           chmod 600 private_key
-
-           ssh -i private_key -o StrictHostKeyChecking=no $SERVER_IP << 'EOF'
+           
+           ssh -i $SSH_PRIVATE_KEY $SERVER_IP << 'EOF'
            
             # Navigate to the server directory
             cd /home/riteshgupta0968/susanskar/server  # Absolute path for server
