--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
+
 PORT=5001
 VITE_REACT_APP_API_URL=http://35.200.236.161:5001
 MONGODB_URL = mongodb+srv://ritesh:ritesh46@cluster0.llbotrp.mongodb.net/susanskar_db?retryWrites=true&w=majority&appName=Cluster0
@@ -5,5 +6,5 @@ MONGODB_URL = mongodb+srv://ritesh:ritesh46@cluster0.llbotrp.mongodb.net/susansk
 
 
 # Google Cloud Storage Configuration
-GOOGLE_APPLICATION_CREDENTIALS=./coastal-walker-441512-n0-e2d9d93089be.json
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\rites\Downloads\coastal-walker-441512-n0-e2d9d93089be.json
 GCS_BUCKET_NAME=susanskar_bucket19
