--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy MERN App
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
+      - main
 
 jobs:
   deploy:
@@ -19,50 +19,43 @@ jobs:
           node-version: '14'
 
       - name: Install frontend dependencies
-        working-directory: ./client  # Navigate to the client directory
+        working-directory: ./client
         run: npm install
 
       - name: Build frontend
-        working-directory: ./client  # Build the frontend in the client directory
+        working-directory: ./client
         run: npm run build
 
       - name: Install backend dependencies
-        working-directory: ./server  # Navigate to the server directory
+        working-directory: ./server
         run: npm install
 
       - name: Deploy to server (via SSH)
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_IP: ${{ secrets.SERVER_IP }}
+          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
+          GCP_KEY: ${{ secrets.GCP_KEY }}
         run: |
-          # Save the private key to a file
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
 
-          # SSH into the server and run the commands
+          echo "$GCP_KEY" > gcp-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/gcp-key.json
+
           ssh -i private_key -o StrictHostKeyChecking=no riteshgupta0968@$SERVER_IP << 'EOF'
-            # Navigate to the server directory
-            cd /home/riteshgupta0968/susanskar/server  # Absolute path for server
-
-            # Pull latest changes from the repo
+            cd /home/riteshgupta0968/susanskar/server
             git pull
-            
-            # Install server dependencies
             npm install
-
-            # Restart PM2 processes
             pm2 restart all
-            
-            # Navigate to the client directory
-            cd /home/riteshgupta0968/susanskar/client  # Absolute path for client
 
-            # Build frontend if necessary (if not already done in CI/CD)
+            cd /home/riteshgupta0968/susanskar/client
             npm run build
 
-            # Optionally restart NGINX if there were frontend changes
             sudo nginx -t
             sudo systemctl restart nginx
           EOF
 
-          # Clean up the private key file
-          rm -f private_key
+          rm -f private_key gcp-key.json
+
