--- a/server/.env
+++ b/server/.env
@@ -5,5 +5,5 @@ MONGODB_URL = mongodb+srv://ritesh:ritesh46@cluster0.llbotrp.mongodb.net/susansk
 
 
 # Google Cloud Storage Configuration
-GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/gcp-key.json
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\rites\Downloads\coastal-walker-441512-n0-e2d9d93089be.json
 GCS_BUCKET_NAME=susanskar_bucket19
